--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -278,11 +278,6 @@
         margin-left: -45px;
     }
 
-    /*
-    .locations-text .btn-info {
-        margin-top: 1rem;
-    }*/
-
     .locations-text .cta-btn {
         width: 250px;
     }
